--- a/HidenIntelligence/bin/HidenIntelligence.dll.config
+++ b/HidenIntelligence/bin/HidenIntelligence.dll.config
@@ -67,8 +67,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DBModels" connectionString="data source=DESKTOP-3QME7JC;initial catalog=DB_LKDT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Model1" connectionString="data source=DESKTOP-3QME7JC;initial catalog=DB_LKDT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Model11" connectionString="data source=DESKTOP-3QME7JC;initial catalog=DB_LKDT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBModels" connectionString="data source=DESKTOP-NKHFAEH;initial catalog=DB_LKDT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=DESKTOP-NKHFAEH;initial catalog=DB_LKDT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model11" connectionString="data source=DESKTOP-NKHFAEH;initial catalog=DB_LKDT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
